tests/macros/expand/plugin.stderr
error: option `plugin` does not exist for kind `expand`
 --> $DIR/plugin.rs:2:44
  |
2 |     let q = requestty::questions![Expand { plugin: todo!() }];
  |                                            ^^^^^^
