tests/macros/expand/plugin.rs
fn main() {
    let q = requestty::questions![Expand { plugin: todo!() }];
}
